feat(config): enhance TypeScript strict mode and configure Turbopack root
- Add strict TypeScript compiler options (noUnusedLocals, noImplicitReturns, etc.)
- Configure Turbopack root directory to fix workspace detection warning
- Add .env.example with placeholders for future integrations (Supabase, OpenAI, Resend)
- Remove extra folders to keep minimal setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,19 @@
     ],
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    // Additional strict options for production-grade code
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "next-env.d.ts",
