--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
     "next": "16.0.7",
+    "next-safe-action": "^8.0.11",
     "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
