Add webhook failure recovery system
Implement robust webhook processing with automatic recovery for failed payments.

Key features:
- Store userId in webhook_events for targeted recovery
- Auto-process pending webhooks when user loads dashboard
- Retry script for batch processing of failed webhooks
- Redirect to Customer Portal when user already has subscription

Database changes:
- Add userId field to webhook_events table with foreign key
- Add indexes for userId and userId+processed queries

New files:
- scripts/retry-webhooks.ts: Batch retry script for failed webhooks
- Migration 0002: Add userId to webhook_events

Services:
- processUserPendingWebhooks(): Process user's failed webhooks on-demand
- getUserUnprocessedSubscriptionWebhooks(): Query pending webhooks by user
- Modified getUserSubscription(): Auto-recover from webhook failures
- Modified createCheckoutUrl(): Redirect to portal if subscription exists

This ensures users see their subscription immediately even if webhook processing fails.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "sync:plans": "dotenv -e .env.local -- npx tsx scripts/sync-plans.ts"
+    "sync:plans": "dotenv -e .env.local -- npx tsx scripts/sync-plans.ts",
+    "retry:webhooks": "dotenv -e .env.local -- npx tsx scripts/retry-webhooks.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
